--- a/NTier_Final/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/NTier_Final/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using NTier_Final.Areas.Identity
 @using NTier_Final.Areas.Identity.Pages
+@using SMS_Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using NTier_Final.Areas.Identity.Data
