--- a/NTier_Final/Views/Shared/_LoginPartial.cshtml
+++ b/NTier_Final/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
-﻿@using Microsoft.AspNetCore.Identity
-@using NTier_Final.Areas.Identity.Data
+﻿@using SMS_Identity
+@using Microsoft.AspNetCore.Identity
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
@@ -11,7 +11,7 @@
         <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
     </li>
     <li class="nav-item">
-        <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+        <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("RoleSelection", "Account")" method="post">
             <button id="logout" type="submit" class="nav-link btn btn-link text-dark border-0">Logout</button>
         </form>
     </li>
